tests/shouldFail/j310b.c
int foo();

int main(void){
	foo((char)5);
}

int foo(char x){
	return 0;
}
